force-app/main/default/objects/Lead/fields/First_Seen_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Seen_Date__c</fullName>
    <description>Immutable - starts 90-day broker protection window</description>
    <label>First Seen Date</label>
    <type>DateTime</type>
</CustomField>