force-app/main/default/objects/Lead/fields/Guidance_Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Cap_Rate__c</fullName>
    <label>Guidance Cap Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>