force-app/main/default/objects/Lead/fields/Guidance_Price__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Price__c</fullName>
    <label>Guidance Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>