force-app/main/default/objects/Lead/fields/Guidance_Price_High__c.field-meta.xml
<CustomField>
    <fullName>Guidance_Price_High__c</fullName>
    <description>High end of a guidance price range, as stated in the broker email. Currency(18,2), matching the existing single-value Guidance_Price__c.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Guidance Price High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>