force-app/main/default/objects/Lead/fields/Is_Accredited__c.field-meta.xml
<CustomField>
    <fullName>Is_Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this investor Lead has self-attested or been verified as an accredited investor per SEC Regulation D. Drives IR onboarding eligibility checks in later milestones.</description>
    <inlineHelpText>Check if this investor has confirmed accredited investor status.</inlineHelpText>
    <label>Is Accredited</label>
    <type>Checkbox</type>
</CustomField>