force-app/main/default/objects/Lead/fields/Is_Duplicate_Property__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicate_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Duplicate Property</label>
    <description>LEGACY as of 2026-07-31 — no longer written by any code path (competing brokers no longer receive a Lead). Retained for historical data only. Formerly set by ExtractAddressQueueable when the property on this Lead had already been claimed by an earlier broker submission. Dead Lead - kept for traceability only.</description>
    <inlineHelpText>LEGACY — was checked when another broker registered this property first; no longer written as of 2026-07-31.</inlineHelpText>
    <type>Checkbox</type>
</CustomField>