force-app/main/default/objects/Lead/fields/Listing_Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Listing_Broker_Email__c</fullName>
    <description>Email address of the listing broker, as stated in the broker email. This is a display field only — the claim engine reads Broker_First__c / the forwarding envelope, never this field.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Listing Broker Email</label>
    <type>Email</type>
</CustomField>