force-app/main/default/objects/Lead/fields/Listing_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Listing_Broker_Name__c</fullName>
    <description>Name of the listing broker, as stated in the broker email. Distinct from the forwarding broker captured on Broker_First__c / Forwarded_By_Email__c — a blast platform's sender is often not the listing broker.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Listing Broker Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>