force-app/main/default/objects/Lead/fields/Lot_Size_Acres__c.field-meta.xml
<CustomField>
    <fullName>Lot_Size_Acres__c</fullName>
    <description>Lot size in acres. The LLM reports whichever unit (acres or square feet) the email actually states; when only square feet is stated, Apex converts to acres (divided by 43,560) rather than the model guessing. Canonical unit = acres, per ARCHITECTURE.md §1 rule 9.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Lot Size (Acres)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>