force-app/main/default/objects/Lead/fields/My_Cap_Rate__c.field-meta.xml
<CustomField>
    <fullName>My_Cap_Rate__c</fullName>
    <label>My Cap Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>