force-app/main/default/objects/Lead/fields/NOI__c.field-meta.xml
<CustomField>
    <fullName>NOI__c</fullName>
    <description>Net operating income for the property, as stated in the broker email.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>NOI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>