force-app/main/default/objects/Lead/fields/Occupancy_Pct__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Pct__c</fullName>
    <description>Reported occupancy percentage (e.g., 88.00 for 88%), as stated in the broker email. Percent(5,2) so values up to 100.00 fit; do not narrow to (3,2).</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Occupancy %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>