force-app/main/default/objects/Lead/fields/Offer_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Due_Date__c</fullName>
    <description>Date offers are due for this deal, as stated in the broker email.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Offer Due Date</label>
    <type>Date</type>
</CustomField>