force-app/main/default/objects/Lead/fields/Parse_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Parse_Confidence__c</fullName>
    <label>Parse Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH</fullName>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
            </value>
            <value>
                <fullName>LOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>