force-app/main/default/objects/Lead/fields/Placer_AI_Link__c.field-meta.xml
<CustomField>
    <fullName>Placer_AI_Link__c</fullName>
    <label>Placer AI Link</label>
    <type>Url</type>
</CustomField>