force-app/main/default/objects/Lead/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <description>The property's marketing or building name as stated in the broker email (e.g., "Royal Inn"), distinct from the mailing address held in Property_Address__c.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Property Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>