force-app/main/default/objects/Lead/fields/Property_Package__c.field-meta.xml
<CustomField>
    <fullName>Property_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Property Package this Lead belongs to, when the source email named two or more properties. Blank on every ordinary single-property Lead.</description>
    <inlineHelpText>Do not edit directly. Set by the Broker Protection pipeline at Lead creation when the source email named more than one property.</inlineHelpText>
    <label>Property Package</label>
    <referenceTo>Property_Package__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>