force-app/main/default/objects/Lead/fields/Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Referred_By__c</fullName>
    <description>Free-text name of the person or firm who referred this investor Lead (e.g. "Jane Smith, ABC Wealth Partners"). Deliberately Text, not a Lookup, even though ARCHITECTURE.md rule 3 reserves a bare object-name field for a relationship to that object: the referrer is very often NOT a Salesforce record at all (an external advisor, friend, or unrepresented individual), so a Contact/Lead lookup would fail to capture the common case. Do not "correct" this into a lookup.</description>
    <inlineHelpText>Enter who referred this investor (name and/or firm).</inlineHelpText>
    <label>Referred By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>