force-app/main/default/objects/Lead/fields/Sale_Process__c.field-meta.xml
<CustomField>
    <fullName>Sale_Process__c</fullName>
    <description>How the property is being marketed for sale (off-market approach, on-market listing, call for offers, or auction), as stated in the broker email.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Sale Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Off-Market</fullName>
            </value>
            <value>
                <fullName>On-Market Listing</fullName>
            </value>
            <value>
                <fullName>Call for Offers</fullName>
            </value>
            <value>
                <fullName>Auction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>