force-app/main/default/objects/Lead/fields/Seller_Entity__c.field-meta.xml
<CustomField>
    <fullName>Seller_Entity__c</fullName>
    <description>Name of the selling entity, as stated in the broker email.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Seller Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>