force-app/main/default/objects/Lead/fields/Unit_Count__c.field-meta.xml
<CustomField>
    <fullName>Unit_Count__c</fullName>
    <description>Number of units, or hotel keys for hospitality assets, as stated in the broker email.</description>
    <inlineHelpText>Units, or hotel keys for hospitality. Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Unit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>