force-app/main/default/objects/Lead/fields/WALT_Years__c.field-meta.xml
<CustomField>
    <fullName>WALT_Years__c</fullName>
    <description>Weighted average lease term remaining, in years, as stated in the broker email.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>WALT (Years)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>