force-app/main/default/objects/Lead/fields/Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Built__c</fullName>
    <description>Year the building was originally constructed, as stated in the broker email. Apex normalizes 2-digit years (e.g., "88" to 1988) before storing.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Year Built</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>