force-app/main/default/objects/Lead/fields/Year_Renovated__c.field-meta.xml
<CustomField>
    <fullName>Year_Renovated__c</fullName>
    <description>Year the building was most recently renovated, as stated in the broker email. Apex normalizes 2-digit years (e.g., "22" to 2022) before storing.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Year Renovated</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>