force-app/main/default/objects/Lead/fields/Zoning__c.field-meta.xml
<CustomField>
    <fullName>Zoning__c</fullName>
    <description>Zoning designation for the property, as stated in the broker email.</description>
    <inlineHelpText>Populated by LLM extraction from the inbound broker email; null when not stated in the email.</inlineHelpText>
    <label>Zoning</label>
    <length>100</length>
    <type>Text</type>
</CustomField>