force-app/main/default/objects/Lead/recordTypes/Investor_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Investor_Onboarding</fullName>
    <active>true</active>
    <businessProcess>Investor Onboarding Lead</businessProcess>
    <description>Tracks prospective investor from Web-to-Lead, Email-to-Lead, and manual entry .</description>
    <label>Investor Onboarding</label>
</RecordType>